@@ -98,7 +98,8 @@ class Report(object):
                     datas, context)
         type, data = self.parse(cursor, user, action_report,
                 objects, datas, context)
-        return (type, base64.encodestring(data), action_report.direct_print)
+        return (type, base64.encodestring(data), action_report.direct_print,
+                action_report.name)
 
     def _get_objects(self, cursor, user, ids, model, datas, context):
         model_obj = self.pool.get(model)
